src/main.css
.isThumbnailHidden ytd-thumbnail,
.isThumbnailHidden ytd-playlist-video-thumbnail-renderer {
  display: none !important;
}

body.isGrayScale {
  filter: grayscale(100%) !important;
}

.hideRecommendation div#related,
.hideRecommendation ytd-feed-filter-chip-bar-renderer,
.hideRecommendation ytd-rich-section-renderer,
.hideRecommendation ytd-mini-guide-renderer,
.hideRecommendation ytd-reel-shelf-renderer {
  display: none !important;
}

.hideRecommendation div#columns {
  display: block !important;
}
.hideRecommendation div#primary {
  margin: auto !important;
}

.hideComments ytd-comments {
  display: none !important;
}

.hideNavDraw tp-yt-app-drawer#guide,
.hideNavDraw #guide-content,
.hideNavDraw yt-icon-button#guide-button,
.hideNavDraw ytd-mini-guide-renderer {
  display: none;
}

.hideNavDraw ytd-page-manager#page-manager {
  margin: 0;
}

.hideNavDraw #contents.ytd-rich-grid-renderer,
.hideNavDraw div#columns,
.hideNavDraw
  ytd-channel-video-player-renderer.style-scope.ytd-item-section-renderer {
  padding-top: 65px;
}

.hideMetaData #metadata-line,
.hideMetaData .metadata-snippet-container,
.hideMetaData .metadata-snippet-text,
.hideMetaData .badge,
.hideMetaData #expandable-metadata {
  display: none !important;
}

